tests/NormalTests/paczka1/small_fuzzy/30831325.err
Error in line 8: e2riCtt9mg S953 70,3
Error in line 14: 5TANOUK A429 45,9
Error in line 12: e2riCtt9mg S996 7,5
